# dev

./: .gitignore  pyproject.toml  requirements.txt
accounts/: admin.py  api.py  models.py
accounts/migrations/: 0001_initial.py
actions/: models.py  utils.py
actions/migrations/: 0001_initial.py
articles/: admin.py  apps.py  permissions.py  serializers.py  urls.py
articles/migrations/: 0001_initial.py  0002_auto_20210125_2328.py
comments/: admin.py  serializers.py  urls.py
core/: settings.py
dev01.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
dev01/accounts/: serializers.py  urls.py
dev01/actions/: admin.py  api.py  serializers.py  urls.py
dev01/articles/: api.py  models.py  tasks.py
dev01/comments/: api.py  models.py
dev01/comments/migrations/: 0001_initial.py
dev01/core/: settings.py  urls.py
dev01/storage/: serializers.py  urls.py
storage/: admin.py  api.py  models.py  utils.py
storage/migrations/: 0001_initial.py
tests/: test_dev01.py
